<resources>
    <string name="app_name">Memory Leak Example</string>
    <string name="static_activity_leak">Static Activity Leak</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="start_next_activity">Start Next Activity</string>
    <string name="static_view_leak">Static View Leak</string>
    <string name="inner_class_leak">Inner Class Leak</string>
    <string name="static_inner_class_leak">Static Inner Class Leak</string>
    <string name="anonymous_class_leak">Anonymous Class Leak</string>
    <string name="sensor_manager_leak">Sensor Manager Leak</string>
    <string name="thread_leak">Thread Leak</string>
    <string name="timer_task_leak">Timer Task Leak</string>
    <string name="handler_leak">Handler Leak</string>
</resources>
